--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@
     <script src="script2.js"></script>
 </body>
 <div class="whatsapp-button">
-    <a href="https://api.whatsapp.com/send?phone=SEUNUMERO&text=Olá,%20preciso%20de%20ajuda" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=21988797623&text=Olá,%20preciso%20de%20ajuda" target="_blank">
         <img src="imagens/whatsapp.png" alt="WhatsApp">
     </a>
 </div>
