--- a/index2.html
+++ b/index2.html
@@ -20,11 +20,12 @@
                 <li class="dropdown">
                     <a href="#">Médio</a>
                     <ul class="submenu">
-                        <li><a href="#">Artes</a></li>
-                        <li><a href="#">Biologia</a></li>
-                        <li><a href="#">Filosofia</a></li>
-                        <li><a href="#">Física</a></li>
-                        <li><a href="#">Geografia</a></li>
+                        <li><a href="artesmed.html">Artes</a></li>
+                        <li><a href="biologia.html">Biologia</a></li>
+                        <li><a href="edfisicamed.html">Educação Física</a></li>
+                        <li><a href="filosofia.html">Filosofia</a></li>
+                        <li><a href="fisica.html">Física</a></li>
+                        <li><a href="geomed.html">Geografia</a></li>
                         <li><a href="#">História</a></li>
                         <li><a href="#">Inglês</a></li>
                         <li><a href="matmed.html" target="_blank" >Matemática</a></li>
@@ -37,6 +38,7 @@
                     <ul class="submenu">
                         <li><a href="#">Artes</a></li>
                         <li><a href="#">Ciências</a></li>
+                        <li><a href="#">Educação Física</a></li>
                         <li><a href="#">Geografia</a></li>
                         <li><a href="#">História</a></li>
                         <li><a href="#">Inglês</a></li>
