--- a/index2.html
+++ b/index2.html
@@ -26,12 +26,12 @@
                         <li><a href="filosofia.html">Filosofia</a></li>
                         <li><a href="fisica.html">Física</a></li>
                         <li><a href="geomed.html">Geografia</a></li>
-                        <li><a href="#">História</a></li>
-                        <li><a href="#">Inglês</a></li>
+                        <li><a href="histmed.html">História</a></li>
+                        <li><a href="ingmed.html">Inglês</a></li>
                         <li><a href="matmed.html" target="_blank" >Matemática</a></li>
                         <li><a href="portmed.html">Português</a></li>
-                        <li><a href="#">Química</a></li>
-                        <li><a href="#">Sociologia</a></li>
+                        <li><a href="quimica.html">Química</a></li>
+                        <li><a href="sociologia.html">Sociologia</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Fundamental</a>
