--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
                 <li class="dropdown">
                     <a href="#">Médio</a>
                     <ul class="submenu">
-                        <li><a href="pagmedio/artesmed.html">Artes</a></li>
+                        <li><a href="artesmed.html">Artes</a></li>
                         <li><a href="biologia.html">Biologia</a></li>
                         <li><a href="edfisicamed.html">Educação Física</a></li>
                         <li><a href="filosofia.html">Filosofia</a></li>
