--- a/index2.html
+++ b/index2.html
@@ -36,13 +36,13 @@
                 </li>
                 <li><a href="#">Fundamental</a>
                     <ul class="submenu">
-                        <li><a href="#">Artes</a></li>
-                        <li><a href="#">Ciências</a></li>
+                        <li><a href="artes-ef.html">Artes</a></li>
+                        <li><a href="ciencias.html">Ciências</a></li>
                         <li><a href="#">Educação Física</a></li>
                         <li><a href="#">Geografia</a></li>
                         <li><a href="#">História</a></li>
                         <li><a href="#">Inglês</a></li>
-                        <li><a href="">Matemática</a></li>
+                        <li><a href="mat-ef.html">Matemática</a></li>
                         <li><a href="#">Português</a></li>
                     </ul>
                 </li>
