--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu com Submenus Flutuantes</title>
     <link rel="stylesheet" href="estilo2.css">
+    <style>
+        /* Estilos para o mural de avisos */
+        .mural {
+            background-color: white;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            text-align: center;
+        }
+        .mural h1 {
+            margin-top: 0;
+        }
+        .mural p {
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -28,7 +48,7 @@
                         <li><a href="geomed.html">Geografia</a></li>
                         <li><a href="histmed.html">História</a></li>
                         <li><a href="ingmed.html">Inglês</a></li>
-                        <li><a href="matmed.html" target="_blank" >Matemática</a></li>
+                        <li><a href="matmed.html" target="_blank">Matemática</a></li>
                         <li><a href="portmed.html">Português</a></li>
                         <li><a href="quimica.html">Química</a></li>
                         <li><a href="sociologia.html">Sociologia</a></li>
@@ -53,21 +73,27 @@
                         <li><a href="#">Telefone</a></li>
                     </ul>
                 </li>
-                
             </ul>
         </nav>
     </header>
     <main>
+        <!-- Mural de Avisos -->
+        <div class="mural">
+            <h1>Mural de Avisos</h1>
+            <p>Bem-vindo ao nosso mural de avisos!</p>
+            <p>Aqui você encontrará todas as informações importantes e atualizações.
+            </p>
+        </div>
         <!-- Conteúdo principal do site -->
     </main>
     <footer>
         <!-- Rodapé do site -->
     </footer>
     <script src="script2.js"></script>
+    <div class="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=5521988797623&text=Olá,%20preciso%20de%20ajuda" target="_blank">
+            <img src="imagens/whatsapp.png" alt="WhatsApp">
+        </a>
+    </div>
 </body>
-<div class="whatsapp-button">
-    <a href="https://api.whatsapp.com/send?phone=5521988797623&text=Olá,%20preciso%20de%20ajuda" target="_blank">
-        <img src="imagens/whatsapp.png" alt="WhatsApp">
-    </a>
-</div>
 </html>
