--- a/index2.html
+++ b/index2.html
@@ -81,8 +81,18 @@
         <div class="mural">
             <h1>Mural de Avisos</h1>
             <p>Bem-vindo ao nosso mural de avisos!</p>
-            <p>Aqui você encontrará todas as informações importantes e atualizações.
-            </p>
+            <p>Aqui você encontrará todas as informações importantes e atualizações.</p>
+            <p><b>Hórarios de antendimento Secretaria</b></p>
+            <p>Matrícula de Segunda a Quinta da das 09:00 as 17:00</p>
+            <p>Documentos necessários originais</p>
+
+            <ul>DOCUMENTAÇÃO</ul>
+            
+            <li>Carteira de Identidade (RG) e CPF ou Carteira de Identidade Nacional.</li>
+            <li>Comprovante de residência atualizado</li>
+            <li>Histórico Escolar ou declaração de escolaridade ou comprovação de aproveitamento do ENCCEJA.</li>
+            <li>Certidão de Nacimento ou Casamento</li>
+           
         </div>
         <!-- Conteúdo principal do site -->
     </main>
