--- a/index2.html
+++ b/index2.html
@@ -79,12 +79,12 @@
                     <ul class="submenu">
                         <li><a href="artes-ef.html">Artes</a></li>
                         <li><a href="ciencias.html">Ciências</a></li>
-                        <li><a href="#">Educação Física</a></li>
-                        <li><a href="#">Geografia</a></li>
-                        <li><a href="#">História</a></li>
-                        <li><a href="#">Inglês</a></li>
+                        <li><a href="ed.fund.html">Educação Física</a></li>
+                        <li><a href="geo.fund.html">Geografia</a></li>
+                        <li><a href="hist-ef.html">História</a></li>
+                        <li><a href="ing-ef.html">Inglês</a></li>
                         <li><a href="mat-ef.html">Matemática</a></li>
-                        <li><a href="#">Português</a></li>
+                        <li><a href="por-ef.html">Português</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
