--- a/index2.html
+++ b/index2.html
@@ -119,7 +119,7 @@
                 <li>Comprovante de residência atualizado</li>
                 <li>Histórico Escolar ou declaração de escolaridade ou comprovação de aproveitamento do ENCCEJA.</li>
                 <li>Certidão de Nascimento ou Casamento</li>
-                <p>Para demais dúvidas sobre notas, videos e demaia coisa acessem nossa plataforma (<strong>cejarj.cecierj.edu.br/ava</strong>) clicando no botão abaixo. OBS.  <b> o login e senha é o número de sua Matrícula.</b></p> 
+                <p> O aluno conta ainda um ambiente virtual de aprendizagem conhecido como CEJA Virtual.La se encontram sua notas e demais coisas para seus estudos. Neste ambiente, o aluno poderá encontrar outros recursos e materiais que podem ajudá-lo na sua aprendizagem. Quer saber mais? Acesse(<strong>cejarj.cecierj.edu.br/ava</strong>) clicando no botão abaixo. OBS.  <b> o login e senha é o número de sua Matrícula.</b></p> 
             </ul>
             <a href="https://cejarj.cecierj.edu.br/ava" class="highlight-link" target="_blank">
                 <img src="imagens/clique-aqui.png.jpg" alt="Clique aqui">
