--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu com Submenus Flutuantes</title>
+    <title>APOSTILAS PARA OS ESTUDOS </title>
     <link rel="stylesheet" href="estilo2.css">
     <style>
         /* Estilos para o mural de avisos */
