--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="imagens/ico/03.ico" type="image/x-icon">
+
+
     <title>APOSTILAS PARA OS ESTUDOS </title>
     <link rel="stylesheet" href="estilo2.css">
     <style>
