--- a/index2.html
+++ b/index2.html
@@ -57,6 +57,17 @@
         .highlight-link img:hover {
             transform: scale(1.1);
         }
+
+
+        a {
+            color: orange; /* Define a cor do link como laranja */
+            text-decoration: none; /* Remove o sublinhado padrão do link */
+        }
+        a:hover {
+            text-decoration: underline; /* Adiciona sublinhado quando o link é hover */
+        }
+
+
     </style>
 </head>
 <body>
@@ -115,6 +126,12 @@
             <h1>Mural de Avisos</h1>
             <p>Bem-vindo ao nosso mural de avisos!</p>
             <p>Aqui você encontrará todas as informações importantes e atualizações.</p>
+
+
+            <b><u>RECESSO ESCOLAR COMEÇA DIA 08/07 E VOLTAREMOS DIA 22/07</u></b>
+
+
+
             <p><b>Horários de Atendimento Secretaria</b></p>
             <p>Matrícula de Segunda a Quinta das 09:00 às 17:00</p>
             <p>Documentos necessários originais</p>
@@ -123,16 +140,28 @@
                 <li>Comprovante de residência atualizado</li>
                 <li>Histórico Escolar ou declaração de escolaridade ou comprovação de aproveitamento do ENCCEJA.</li>
                 <li>Certidão de Nascimento ou Casamento</li>
+<p>
+    Quem está fora da idade escolar e deseja concluir os ensinos Fundamental e Médio já pode se inscrever na Rede CEJA – Centro de Educação de Jovens e Adultos. A matrícula está aberta para novos alunos e o processo é totalmente online e gratuito. A primeira etapa consiste na pré-matrícula que deve ser feita no site <a href="https://sca.cecierj.edu.br/scc/prealuno/preMatricula/" target="_blank">Clique aqui para a pre-matrícula</a>
+</p>
+
+<P>Após a pré-matrícula, vá a unidade e leve os documentos necessários para confirmar sua matricula e ser orientado por um de nossos professores.</P>
+
+<P>
+    DE TERÇA A QUINTA DAS 09 AS 17:00h SEXTA DAS 09 AS 16:00h
+</P>
+
+<P> <b>Nosso endereço</b> </P>
+<b>RUA PROCÓPIO FERREIRA, VILA LAGE, SN  CIEP 247</b>
                 <p> O aluno conta ainda um ambiente virtual de aprendizagem conhecido como CEJA Virtual.La se encontram sua notas e demais coisas para seus estudos. Neste ambiente, o aluno poderá encontrar outros recursos e materiais que podem ajudá-lo na sua aprendizagem. Quer saber mais? Acesse(<strong>cejarj.cecierj.edu.br/ava</strong>) clicando no botão abaixo. OBS.  <b> o login e senha é o número de sua Matrícula.</b></p> 
             </ul>
             <a href="https://cejarj.cecierj.edu.br/ava" class="highlight-link" target="_blank">
                 <img src="imagens/clique-aqui.png.jpg" alt="Clique aqui">
             </a>
-        </div>
+        </div> -->
         <!-- Conteúdo principal do site -->
     </main>
     <footer>
-        <!-- Rodapé do site -->
+        <!-- Rodapé do site 
     </footer>
     <script src="script2.js"></script>
     <div class="whatsapp-button">
