--- a/index2.html
+++ b/index2.html
@@ -161,7 +161,7 @@
         <!-- Conteúdo principal do site -->
     </main>
     <footer>
-        <!-- Rodapé do site 
+        <!-- Rodapé do site -->
     </footer>
     <script src="script2.js"></script>
     <div class="whatsapp-button">
