Atualizar o index2.html

--- a/index2.html
+++ b/index2.html
@@ -128,7 +128,7 @@
             <p>Aqui você encontrará todas as informações importantes e atualizações.</p>
 
 
-            <b><u>RECESSO ESCOLAR COMEÇA DIA 08/07 E VOLTAREMOS DIA 22/07</u></b>
+            <b><u>No período de 08/07 a 19/07 estaremos em recesso escolar, retornaremos dia 22/07 com nossas atividades.</u></b>
 
 
 
