--- a/index2.html
+++ b/index2.html
@@ -277,7 +277,7 @@ footer {
                     </div>
                     <div class="socials">
                         <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/ceja.sg/"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
