--- a/index2.html
+++ b/index2.html
@@ -276,7 +276,7 @@ footer {
                     </div>
                     <div class="socials">
                         <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/ceja.sg/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/ceja.sg/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
@@ -289,7 +289,7 @@ footer {
    </footer>
     <script src="script2.js"></script>
     <div class="whatsapp-button">
-        <a href="https://api.whatsapp.com/send?phone=5521989497554   &text=Olá,%20preciso%20de%20ajuda" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5521989497554&text=Olá,%20preciso%20de%20ajuda" target="_blank">
             <img src="imagens/whatsapp.png" alt="WhatsApp">
         </a>
     </div>
