--- a/index2.html
+++ b/index2.html
@@ -241,12 +241,12 @@ footer {
 <P>Após a pré-matrícula, vá a unidade e leve os documentos necessários para confirmar sua matricula e ser orientado por um de nossos professores.</P>
 
 <P>
-    DE TERÇA A QUINTA DAS 09 AS 17:00h SEXTA DAS 09 AS 16:00h
+    DE SEGUNDA A QUINTA DAS 09 AS 17:00h SEXTA DAS 09 AS 16:00h
 </P>
 
 <P> <b>Nosso endereço</b> </P>
 <b>RUA PROCÓPIO FERREIRA, VILA LAGE, SN  CIEP 247</b>
-                <p> O aluno conta ainda um ambiente virtual de aprendizagem conhecido como CEJA Virtual.La se encontram sua notas e demais coisas para seus estudos. Neste ambiente, o aluno poderá encontrar outros recursos e materiais que podem ajudá-lo na sua aprendizagem. Quer saber mais? Acesse(<strong>cejarj.cecierj.edu.br/ava</strong>) clicando no botão abaixo. OBS.  <b> o login e senha é o número de sua Matrícula.</b></p> 
+                <p> O aluno conta ainda um ambiente virtual de aprendizagem conhecido como CEJA Virtual.La se encontram sua notas e demais coisas para seus estudos. Neste ambiente, o aluno poderá encontrar outros recursos e materiais que podem ajudá-lo na sua aprendizagem. Quer saber mais? Acesse(<strong>cejarj.cecierj.edu.br/ava</strong>) clicando no botão abaixo. OBS.  o login é o número de sua <b>MATRÍCULA</b> e a senha é o número de sua <strong>Matrícula</strong> ou o número de seu <strong>CPF</strong>.</b></p> 
             </ul>
             <a href="https://cejarj.cecierj.edu.br/ava" class="highlight-link" target="_blank">
                 <img src="imagens/clique-aqui.png.jpg" alt="Clique aqui">
