--- a/index2.html
+++ b/index2.html
@@ -227,7 +227,9 @@ footer {
             <p>Aqui você encontrará todas as informações importantes e atualizações.</p>
            
             <p><b>Horários de Atendimento Secretaria</b></p>
-            <p>Matrícula de Segunda a Quinta das 09:00 às 17:00</p>
+            <p>Matrícula de Segunda a Quinta das 09:00h às 17:00h</p>
+            <p>Sexta das 09:00h às 16:00h</p>
+            <p><b>Somente matrícula do</b> <mark><b>Ensino Médio</b></mark></p>
             <p>Documentos necessários originais</p>
             <ul>
                 <li>Carteira de Identidade (RG) e CPF ou Carteira de Identidade Nacional.</li>
@@ -235,7 +237,7 @@ footer {
                 <li>Histórico Escolar ou declaração de escolaridade ou comprovação de aproveitamento do ENCCEJA.</li>
                 <li>Certidão de Nascimento ou Casamento</li>
 <p>
-    Quem está fora da idade escolar e deseja concluir os ensinos Fundamental e Médio já pode se inscrever na Rede CEJA – Centro de Educação de Jovens e Adultos. A matrícula está aberta para novos alunos e o processo é totalmente online e gratuito. A primeira etapa consiste na pré-matrícula que deve ser feita no site <a href="https://sca.cecierj.edu.br/scc/prealuno/preMatricula/" target="_blank">Clique aqui para a pre-matrícula</a>
+    Quem está fora da idade escolar e deseja concluir o ensino Médio já pode se inscrever na Rede CEJA – Centro de Educação de Jovens e Adultos. A matrícula está aberta para novos alunos e o processo é totalmente online e gratuito. A primeira etapa consiste na pré-matrícula que deve ser feita no site <a href="https://sca.cecierj.edu.br/scc/prealuno/preMatricula/" target="_blank">Clique aqui para a pre-matrícula</a>
 </p>
 
 <P>Após a pré-matrícula, vá a unidade e leve os documentos necessários para confirmar sua matricula e ser orientado por um de nossos professores.</P>
