--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Menu Responsivo com WhatsApp</title>
     <link rel="stylesheet" href="estilo.css">
 <style>
-
+ body {
+    background-image: url(imagens/img.bck/bg-login.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;  ;
+ }
 </style>
 </head>
 <body>
