--- a/index2.html
+++ b/index2.html
@@ -266,7 +266,7 @@ footer {
                 <div class="footer-section about">
                     <h2 class="logo-text">CEJA-SG</h2>
                     <p>
-                        O Centro de Educação de Jovens e Adultos de São Gonçalo oferece ensino fundamental e médio com qualidade e flexibilidade para jovens e adultos fora da idade escolar.
+                        O Centro de Educação de Jovens e Adultos de São Gonçalo oferece ensino médio com qualidade e flexibilidade para jovens e adultos fora da idade escolar.
                     </p>
                     <div class="contact">
                         <span><i class="fas fa-phone"></i> &nbsp; (21) 2622-9012 </span>
