--- a/index2.html
+++ b/index2.html
@@ -307,8 +307,8 @@ footer {
         <tbody>
             <tr>
                 <td>Matemática</td>
-                <td>Prof. João</td>
-                <td>Segunda, Quarta</td>
+                <td>Prof. Fernando</td>
+                <td>Segunda, Quarta, Quinta</td>
                 <td>10h - 12h</td>
             </tr>
             <tr>
