--- a/index2.html
+++ b/index2.html
@@ -309,11 +309,11 @@ footer {
                 <td>Matemática</td>
                 <td>Prof. Fernando</td>
                 <td>Segunda, Quarta, Quinta</td>
-                <td>10h - 12h</td>
+                <td>09h - 12h</td>
             </tr>
             <tr>
                 <td>Português</td>
-                <td>Profa. Ana</td>
+                <td>Profa. Cíntia</td>
                 <td>Terça, Quinta</td>
                 <td>13h - 15h</td>
             </tr>
