--- a/index2.html
+++ b/index2.html
@@ -311,11 +311,17 @@ footer {
                 <td>Segunda, Quarta, Quinta</td>
                 <td>09h - 12h</td>
             </tr>
+             <tr>
+                <td>Matemática</td>
+                <td>Prof. Patrícia</td>
+                <td>Segunda, Quarta, Quinta</td>
+                <td>09h - 12h</td>
+            </tr>
             <tr>
                 <td>Português</td>
                 <td>Profa. Cíntia</td>
                 <td>Terça, Quinta</td>
-                <td>13h - 15h</td>
+                <td>12h - 15h</td>
             </tr>
             <!-- Adicione mais linhas conforme necessário -->
         </tbody>
