--- a/index2.html
+++ b/index2.html
@@ -306,6 +306,19 @@ footer {
         </thead>
         <tbody>
             <tr>
+                <td>Artes</td>
+                <td>Prof. Kézia</td>
+                <td>Segunda</td>
+                <td>14:40h - 20:30h</td>
+            </tr>
+             <tr>
+                <td>Artes</td>
+                <td>Prof. Kézia</td>
+                <td>Quarta</td>
+                <td>08:50h - 13:00h</td>
+            </tr>
+             <tr>
+            <tr>
                 <td>Matemática</td>
                 <td>Prof. Fernando</td>
                 <td>Segunda, Quarta, Quinta</td>
