--- a/index2.html
+++ b/index2.html
@@ -259,33 +259,7 @@ footer {
         <!-- Conteúdo principal do site -->
     </main>
 
-    <footer>
-        <!-- Rodapé do site -->
-        <footer>
-            <div class="footer-content">
-                <div class="footer-section about">
-                    <h2 class="logo-text">CEJA-SG</h2>
-                    <p>
-                        O Centro de Educação de Jovens e Adultos de São Gonçalo oferece ensino médio com qualidade e flexibilidade para jovens e adultos fora da idade escolar.
-                    </p>
-                    <div class="contact">
-                        <span><i class="fas fa-phone"></i> &nbsp; (21) 2622-9012 </span>
-                        <span><i class="fas fa-envelope"></i> &nbsp; cejasaogoncalo.adm@gmail.com</span>
-                    </div>
-                    <div class="socials">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/ceja.sg/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                &copy; 2024 CEJA-SG | Designed by Well
-            </div>
-        </footer>
-        
-   </footer>
-    <script src="script2.js"></script>
+     <script src="script2.js"></script>
     <div class="whatsapp-button">
         <a href="https://api.whatsapp.com/send?phone=552126229012&text=Olá,%20preciso%20de%20ajuda" target="_blank">
             <img src="imagens/whatsapp.png" alt="WhatsApp">
@@ -327,15 +301,76 @@ footer {
 
     // Geração dinâmica das linhas da tabela de horários
 const horarios = [
-    {disciplina: "Artes", professor: "Prof. Kézia", dia: "Segunda", horario: "14:40h - 20:30h"},
-    {disciplina: "Artes", professor: "Prof. Kézia", dia: "Quarta", horario: "08:50h - 13:00h"},
+    {disciplina: "Artes", professor: "Profa. Kézia", dia: "Segunda", horario: "14:40h - 20:30h"},
+    {disciplina: "Artes", professor: "Profa. Kézia", dia: "Quarta", horario: "08:50h - 13:00h"},
+
     {disciplina: "Biologia/Ciências", professor: "Prof. Elson", dia: "Segunda", horario: "08:50h - 15:30h"},
     {disciplina: "Biologia/Ciências", professor: "Prof. Tereza", dia: "Terça", horario: "08:50h - 13:50h"},
     {disciplina: "Biologia/Ciências", professor: "Prof. Tereza", dia: "Quarta", horario: "08:50h - 09:40h"},
     {disciplina: "Biologia/Ciências", professor: "Prof. Elson", dia: "Quarta", horario: "13:50h - 15:30h"},
-    {disciplina: "Matemática", professor: "Prof. Fernando", dia: "Segunda, Quarta, Quinta", horario: "09h - 12h"},
-    {disciplina: "Matemática", professor: "Prof. Patrícia", dia: "Segunda, Quarta, Quinta", horario: "09h - 12h"},
-    {disciplina: "Português", professor: "Profa. Cíntia", dia: "Terça, Quinta", horario: "12h - 15h"}
+    {disciplina: "Biologia/Ciências", professor: "Prof. Elson", dia: "Quarta", horario: "13:50h - 15:30h"},
+    {disciplina: "Biologia/Ciência", professor: "Prof. Tereza", dia: "Quarta", horario: "08:50h - 09:40h"},
+    {disciplina: "Biologia/Ciência", professor: "Prof.Elson", dia: "Quarta", horario: "13:50h - 15:30h"},
+    {disciplina: "Biologia/Ciência", professor: "Prof.Nelson", dia: "Quinta", horario: "13:00h - 13:50h"},
+    {disciplina: "Biologia/Ciência", professor: "Prof. Tereza", dia: "Sexta", horario: "08:50h - 13:00h"},
+    {disciplina: "Biologia/Ciência", professor: "Prof.Nelson", dia: "Sexta", horario: "13:00h - 17:10h"},
+
+    {disciplina: "Educação Física", professor: "Prof.Flávio", dia: "Segunda", horario: "17:10h - 20:30h"},
+    {disciplina: "Educação Física", professor: "Prof.Flávio", dia: "Terça", horario: "15:30h - 18:50h"},
+    {disciplina: "Educação Física", professor: "Prof.Flávio", dia: "Quinta", horario: "10:30h - 13:50h"},
+
+    {disciplina: "Filosofia", professor: "Prof.Leandro", dia: "Terça", horario: "13:50h - 15:30h"},
+    {disciplina: "Filosofia", professor: "Prof.José Augusto", dia: "Quarta", horario: "18:50h - 20:30h"},
+    {disciplina: "Filosofia", professor: "Prof.Leandro", dia: "Quinta", horario: "08:50h - 12:10h"},
+    {disciplina: "Filosofia", professor: "Prof.José Augusto", dia: "Quinta", horario: "13:50h - 17:10h"},
+
+    {disciplina: "Física", professor: "Prof.Cristiano", dia: "Segunda", horario: "11:20h - 13:50h"},
+    {disciplina: "Física", professor: "Prof.Candido", dia: "Terça", horario: "08:50h - 13:50h"},
+    {disciplina: "Física", professor: "Prof.Candido", dia: "Quarta", horario: "08:50h - 13:50h"},
+    {disciplina: "Física", professor: "Prof.Cristiano", dia: "Quarta", horario: "13:50h - 18:50h"},
+
+    {disciplina: "Geografia", professor: "Prof.Elson", dia: "Terça", horario: "08:50h - 13:50h"},
+    {disciplina: "Geografia", professor: "Prof.Elson", dia: "Quarta", horario: "08:50h - 13:50h"},
+    {disciplina: "Geografia", professor: "Profa.Sheila", dia: "Quarta", horario: "13:50h - 18:50h"},
+    {disciplina: "Geografia", professor: "Profa.Rachel", dia: "Quinta", horario: "08:50h - 13:50h"},
+    {disciplina: "Geografia", professor: "Profa.Rachel", dia: "Sexta", horario: "08:50h - 13:50h"},
+
+    {disciplina: "História", professor: "Profa.Ivete", dia: "Segunda", horario: "08:50h - 12:10h"},
+    {disciplina: "História", professor: "Prof.Luis Emílio", dia: "Segunda", horario: "13:50h - 18:50h"},
+    {disciplina: "História", professor: "Profa.Ivete", dia: "Terça", horario: "08:50h - 12:10h"},
+    {disciplina: "História", professor: "Prof.Rogério", dia: "Quarta", horario: "09:40h - 13:00h"},
+    {disciplina: "História", professor: "Prof.Luís Emílio", dia: "Quinta", horario: "13:50h - 16:20h"},
+    {disciplina: "História", professor: "Profa.Ivete", dia: "Sexta", horario: "08:50h - 12:10h"},
+    {disciplina: "História", professor: "Prof.Rogério", dia: "Sexta", horario: "12:10h - 17:10h"},
+
+    {disciplina: "Inglês", professor: "Profa. Marcela", dia: "Segunda", horario: "13:00h - 15:30h"},
+    {disciplina: "Inglês", professor: "Prof. Marcela", dia: "Terça", horario: "08:50h - 15:30h"},
+    {disciplina: "Inglês", professor: "Profa. Ilca", dia: "Quarta", horario: "08:50h - 12:10h"},
+    {disciplina: "Inglês", professor: "Profa. Marcela", dia: "Quarta", horario: "13:00h - 13:50h"},
+    {disciplina: "Inglês", professor: "Profa. Ilca", dia: "Quinta", horario: "17:10h - 20:30h"},
+    {disciplina: "Inglês", professor: "Profa. Ilca", dia: "Sexta", horario: "13:50h - 17:10h"},
+
+    {disciplina: "Português", professor: "Profa. Cintia", dia: "Segunda", horario: "08:50h - 15:30h"},
+    {disciplina: "Português", professor: "Profa. Geovania", dia: "Segunda", horario: "13:50h - 20:30h"},
+    {disciplina: "Português", professor: "Profa. Patricia", dia: "Terça", horario: "08:50h - 12:10h"},
+    {disciplina: "Português", professor: "Prof. Marília", dia: "Terça", horario: "15:30h - 20:30h"},
+    {disciplina: "Português", professor: "Profa. Geovania", dia: "Quarta", horario: "08:50h - 13:50h"},
+    {disciplina: "Português", professor: "Profa. Marília", dia: "Quarta", horario: "14:40h - 19:40h"},
+    {disciplina: "Português", professor: "Prof. Patricia", dia: "Quinta", horario: "08:50h - 12:10h"},
+    {disciplina: "Português", professor: "Profa. Patricia", dia: "Quinta", horario: "17:10h - 20:30h"},
+    {disciplina: "Português", professor: "Profa. Patricia", dia: "Sexta", horario: "14:40h - 19:40h"},
+
+    {disciplina: "Matemática", professor: "Prof. Marcelo", dia: "Segunda", horario: "08:50h - 15:30h"},
+    {disciplina: "Matemática", professor: "Profa. Patrícia", dia: "Terça", horario: "15:30h - 15h"},
+    {disciplina: "Matemática", professor: "Prof. Marcelo", dia: "Segunda", horario: "08:50h - 15:30h"},
+    {disciplina: "Matemática", professor: "Profa. Patrícia", dia: "Segunda", horario: "15:30h - 20:30h"},
+    {disciplina: "Matemática", professor: "Profa. Gleicy", dia: "Terça", horario: "08:50h - 15:30h"},
+    {disciplina: "Matemática", professor: "Prof. Fernando", dia: "Terça", horario: "18:50h - 20:30h"},
+    {disciplina: "Matemática", professor: "Profa. Gleicy", dia: "Quarta", horario: "08:50h - 15:30h"},
+    {disciplina: "Matemática", professor: "Prof. Fernando", dia: "Quarta", horario: "18:50h - 19:40h"},
+    {disciplina: "Matemática", professor: "Profa. Patrícia", dia: "Quinta", horario: "13:00h - 18:00h"},
+    {disciplina: "Matemática", professor: "Prof. Fernando", dia: "Quinta", horario: "18:00h - 20:30h"},
+    
 ];
 
 const tbody = document.getElementById('tbody-horarios');
@@ -351,5 +386,29 @@ if (tbody) {
 }
 </script>
 
+    <footer>
+        <!-- Rodapé do site -->
+        <footer>
+            <div class="footer-content">
+                <div class="footer-section about">
+                    <h2 class="logo-text">CEJA-SG</h2>
+                    <p>
+                        O Centro de Educação de Jovens e Adultos de São Gonçalo oferece ensino médio com qualidade e flexibilidade para jovens e adultos fora da idade escolar.
+                    </p>
+                    <div class="contact">
+                        <span><i class="fas fa-phone"></i> &nbsp; (21) 2622-9012 </span>
+                        <span><i class="fas fa-envelope"></i> &nbsp; cejasaogoncalo.adm@gmail.com</span>
+                    </div>
+                    <div class="socials">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ceja.sg/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                &copy; 2025 CEJA-SG | Designed by Well
+            </div>
+        </footer>
 </body>
 </html>
