--- a/index2.html
+++ b/index2.html
@@ -357,7 +357,7 @@ const horarios = [
     {disciplina: "Português", professor: "Profa. Geovania", dia: "Quarta", horario: "08:50h - 13:50h"},
     {disciplina: "Português", professor: "Profa. Marília", dia: "Quarta", horario: "14:40h - 19:40h"},
     {disciplina: "Português", professor: "Prof. Patricia", dia: "Quinta", horario: "08:50h - 12:10h"},
-    {disciplina: "Português", professor: "Profa. Patricia", dia: "Quinta", horario: "17:10h - 20:30h"},
+    {disciplina: "Português", professor: "Profa. Cíntia", dia: "Quinta", horario: "17:10h - 20:30h"},
     {disciplina: "Português", professor: "Profa. Patricia", dia: "Sexta", horario: "14:40h - 19:40h"},
 
     {disciplina: "Matemática", professor: "Prof. Marcelo", dia: "Segunda", horario: "08:50h - 15:30h"},
@@ -371,6 +371,62 @@ const horarios = [
     {disciplina: "Matemática", professor: "Profa. Patrícia", dia: "Quinta", horario: "13:00h - 18:00h"},
     {disciplina: "Matemática", professor: "Prof. Fernando", dia: "Quinta", horario: "18:00h - 20:30h"},
     
+    {disciplina: "Química", professor: "Prof. Roberto", dia: "Quarta", horario: "13:00h - 13:50h"},
+    {disciplina: "Química", professor: "Prof. Davi", dia: "Quarta", horario: "13:50h - 20:30h"},
+    {disciplina: "Química", professor: "Prof. Roberto", dia: "Quinta", horario: "09:40h - 16:20h"},
+    {disciplina: "Química", professor: "Prof. Davi", dia: "Quinta", horario: "17:10h - 20:30h"},
+
+    {disciplina: "Sociologia", professor: "Prof. Evandro", dia: "Segunda", horario: "14:40h - 19:40h"},
+    {disciplina: "Sociologia", professor: "Prof. Hellington", dia: "Quarta", horario: "09:40h - 14:40h"},
+
+    {disciplina: "Componente de Área 1 Linguagens", professor: "Profa. Cíntia", dia: "Terça", horario: "13:00h - 15:30h"},
+
+    {disciplina: "Componente de Área 2 Linguagens", professor: "Profa. Cíntia", dia: "Quinta", horario: "13:50h - 17:10h"},
+
+    {disciplina: "Componente de Área 1 Matemática", professor: "Profa. Gleicy", dia: "Sexta", horario: "08:50h - 12:10h"},
+
+    {disciplina: "Componente de Área 2 Matemática", professor: "Prof. Marcelo", dia: "Quinta", horario: "08:50h - 12:10h"},
+    {disciplina: "Componente de Área 2 Matemática", professor: "Profa. Gleicy", dia: "Sexta", horario: "12:10h - 15:30h"},
+
+    {disciplina: "Componente de Área 1 Ciências da Natureza", professor: "Prof. Cristiano", dia: "Segunda", horario: "08:50h - 11:20h"},
+    {disciplina: "Componente de Área 1 Ciências da Natureza", professor: "Prof. Roberto", dia: "Quarta", horario: "10:30h - 13:00h"},
+    {disciplina: "Componente de Área 1 Ciências da Natureza", professor: "Profa. Tereza", dia: "Segunda", horario: "13:00h - 14:40h"},
+
+    {disciplina: "Componente de Área 2 Ciências da Natureza", professor: "Prof. Cristiano", dia: "Segunda", horario: "13:50h - 15:30h"},
+    {disciplina: "Componente de Área 2 Ciências da Natureza", professor: "Prof. Nelson", dia: "Quarta", horario: "08:50h - 10:30h"},
+    {disciplina: "Componente de Área 2 Ciências da Natureza", professor: "Prof. Nelson", dia: "Quinta", horario: "13:50h - 17:10h"},
+
+    {disciplina: "Componente de Área 1 Humanas", professor: "Prof. Evandro", dia: "Terça", horario: "09:40h - 13:00h"},
+    {disciplina: "Componente de Área 1 Humanas", professor: "Prof. José Augusto", dia: "Quinta", horario: "17:10h - 20:30h"},
+
+    {disciplina: "Componente de Área 2 Humanas", professor: "Prof. Evandro", dia: "Terça", horario: "08:50h - 09:40h"},
+    {disciplina: "Componente de Área 2 Humanas", professor: "Prof. Evandro", dia: "Quinta", horario: "10:30h - 15:30h"},
+
+    {disciplina: "Eletiva 1 - Reforço", professor: "Profa. Patrícia (Matemática)", dia: "Segunda", horario: "17:10h - 20:30h"},
+    {disciplina: "Eletiva 1 - Reforço", professor: "Profa. Isabelle", dia: "Terça", horario: "13:50h - 16:20h"},
+    {disciplina: "Eletiva 1 - Reforço", professor: "Profa. Marcela", dia: "Quarta", horario: "13:50h - 15:30h"},
+    {disciplina: "Eletiva 1 - Reforço", professor: "Profa. Isabelle", dia: "Quinta", horario: "13:00h - 16:40h"},
+    {disciplina: "Eletiva 1 - Reforço", professor: "Profa. Patrícia (Português)", dia: "Sexta", horario: "16:20h - 17:10h"},
+
+    {disciplina: "Eletiva 2 - Espanhol", professor: "Profa. Isabelle", dia: "Terça", horario: "16:20h - 20:30h"},
+    {disciplina: "Eletiva 2 - Espanhol", professor: "Profa. Isabelle", dia: "Quinta", horario: "14:40h - 20:30h"},
+
+
+    {disciplina: "Eletiva 2 - Estudos Orientados", professor: "Profa. Sheila", dia: "Terça", horario: "13:50h - 15:30h"},
+    {disciplina: "Eletiva 2 - Estudos Orientados", professor: "Prof. Leandro", dia: "Terça", horario: "15:30h - 16:20h"},
+    {disciplina: "Eletiva 2 - Estudos Orientados", professor: "Prof. Rogério", dia: "Quarta", horario: "13:00h - 16:20h"},
+    {disciplina: "Eletiva 2 - Estudos Orientados", professor: "Prof. Leandro", dia: "Quinta", horario: "12:10h - 13:00h"},
+
+    {disciplina: "Eletiva 3", professor: "Prof. Nelson", dia: "Terça", horario: "10:30h - 15:30h"},
+    {disciplina: "Eletiva 3", professor: "Profa. Tereza", dia: "Quarta", horario: "09:40h - 13:00h"},
+    {disciplina: "Eletiva 3", professor: "Profa. Raquel", dia: "Quinta", horario: "13:50h - 14:40h"},
+    {disciplina: "Eletiva 3", professor: "Prof. Emílio", dia: "Quinta", horario: "16:20h - 18:50h"},
+    {disciplina: "Eletiva 3", professor: "Profa. Raquel", dia: "Sexta", horario: "13:50h - 14:40h"},
+
+    {disciplina: "Projeto de Vida", professor: "Prof. Leandro", dia: "Terça", horario: "08:50h - 13:50h"},
+    {disciplina: "Projeto de Vida", professor: "Prof. Hellington", dia: "Quarta", horario: "14:40h - 15:30h"},
+    {disciplina: "Projeto de Vida", professor: "Prof. José Augusto", dia: "Quarta", horario: "17:10h - 18:50h"},
+    {disciplina: "Projeto de Vida", professor: "Prof. Hellington", dia: "Quinta", horario: "15:30h - 16:20h"},
 ];
 
 const tbody = document.getElementById('tbody-horarios');
