--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,32 @@
     <link rel="stylesheet" href="estilo2.css">
 
     <style>
+/* Destaque para o botão de horários */
+#toggleHorarioBtn {
+    font-size: 1.1em;
+    font-weight: bold;
+    background: #002D42;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    padding: 12px 28px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+    margin: 20px auto;
+    display: block;
+    letter-spacing: 1px;
+}
+#toggleHorarioBtn:hover {
+    background: #005c8a;
+    transform: scale(1.05);
+}
+
+/* Letras maiores na tabela de horários */
+.tabela-horarios th, .tabela-horarios td {
+    font-size: 1.15em;
+    padding: 12px 8px;
+}
         /* Estilos para o mural de avisos */
         .mural {
             background-color: white;
