--- a/index2.html
+++ b/index2.html
@@ -447,7 +447,7 @@ const horarios = [
     {disciplina: "Componente de Área 2 Ciências da Natureza", professor: "Prof. Nelson", dia: "Quarta", horario: "08:50h - 10:30h"},
     {disciplina: "Componente de Área 2 Ciências da Natureza", professor: "Prof. Nelson", dia: "Quinta", horario: "13:50h - 17:10h"},
 
-    {disciplina: "Componente de Área 1 Humanas", professor: "Prof. Evandro", dia: "Terça", horario: "09:40h - 13:00h"},
+    {disciplina: "Compde Área 1 Humanas", professor: "Prof. Evandro", dia: "Terça", horario: "09:40h - 13:00h"},
     {disciplina: "Componente de Área 1 Humanas", professor: "Prof. José Augusto", dia: "Quinta", horario: "17:10h - 20:30h"},
 
     {disciplina: "Componente de Área 2 Humanas", professor: "Prof. Evandro", dia: "Terça", horario: "08:50h - 09:40h"},
