--- a/index2.html
+++ b/index2.html
@@ -277,7 +277,7 @@ footer {
             <p>Bem-vindo ao nosso mural de avisos!</p>
             <p>Aqui você encontrará todas as informações importantes e atualizações.</p>
            
-            <p><b>Horários de Atendimento Secretaria</b></p>
+            <p><b>Horários de Atendimento da Secretaria</b></p>
             <p>Matrícula de Segunda a Quinta das 09:00h às 17:00h</p>
             <p>Sexta das 09:00h às 16:00h</p>
             <p><b>Somente matrícula do</b> <mark><b>Ensino Médio</b></mark></p>
