--- a/index2.html
+++ b/index2.html
@@ -294,7 +294,7 @@ footer {
 <P>Após a pré-matrícula, vá a unidade e leve os documentos necessários para confirmar sua matricula e ser orientado por um de nossos professores.</P>
 
 <P>
-    DE SEGUNDA A QUINTA DAS 09 AS 17:00h SEXTA DAS 09 AS 16:00h
+    DE SEGUNDA A QUINTA DAS 09:00h AS 17:00h SEXTA DAS 09:00h AS 16:00h
 </P>
 
 <P> <b>Nosso endereço</b> </P>
