--- a/index2.html
+++ b/index2.html
@@ -280,7 +280,7 @@ footer {
             <p><b>Horários de Atendimento da Secretaria</b></p>
             <p>Matrícula de Segunda a Quinta das 09:00h às 17:00h</p>
             <p>Sexta das 09:00h às 16:00h</p>
-            <p><b> matrículas do</b> <mark><b>Ensino Médio e Fundamental</b></mark></p>
+            <p><b> Matrículas do</b> <mark><b>Ensino Médio e Fundamental</b></mark></p>
             <p>Documentos necessários originais</p>
             <ul>
                 <li>Carteira de Identidade (RG) e CPF ou Carteira de Identidade Nacional.</li>
